--- a/Jupyter Exercises/Pandas/movielens.ipynb
+++ b/Jupyter Exercises/Pandas/movielens.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "6077fa3f",
    "metadata": {},
    "outputs": [
@@ -21,39 +21,472 @@
       " El volumen de la unidad C no tiene etiqueta.\n",
       " El número de serie del volumen es: D2F9-5EFA\n",
       "\n",
-      " Directorio de C:\\Users\\rehmi\\Documents\\Machine_Learning_2022\\Jupyter Exercises\n",
+      " Directorio de C:\\Users\\rehmi\\Udemy Courses\\Machine_Learning_2022\\Jupyter Exercises\\Pandas\n",
       "\n",
-      "07/10/2023  18:52    <DIR>          .\n",
-      "07/10/2023  18:52    <DIR>          ..\n",
-      "07/10/2023  18:50    <DIR>          .ipynb_checkpoints\n",
-      "02/10/2023  22:28               144 important_array.npy\n",
-      "02/10/2023  20:38            28.569 instalar_libreria_y_temas.ipynb\n",
-      "28/09/2023  18:52            33.566 introduccion_jupyter.ipynb\n",
-      "07/10/2023  18:52             1.203 movielens.ipynb\n",
-      "02/10/2023  23:49            47.340 Numpy.ipynb\n",
+      "07/10/2023  19:46    <DIR>          .\n",
+      "07/10/2023  19:46    <DIR>          ..\n",
+      "07/10/2023  19:46    <DIR>          .ipynb_checkpoints\n",
+      "07/10/2023  19:31    <DIR>          movielens\n",
+      "07/10/2023  18:54             2.107 movielens.ipynb\n",
       "07/10/2023  18:48            38.792 pandas.ipynb\n",
-      "05/10/2023  16:05         7.213.158 processing_images.ipynb\n",
-      "               7 archivos      7.362.772 bytes\n",
-      "               3 dirs  41.975.250.944 bytes libres\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "El nombre del directorio no es válido.\n"
+      "               2 archivos         40.899 bytes\n",
+      "               4 dirs  39.446.061.056 bytes libres\n",
+      " El volumen de la unidad C no tiene etiqueta.\n",
+      " El número de serie del volumen es: D2F9-5EFA\n",
+      "\n",
+      " Directorio de C:\\Users\\rehmi\\Udemy Courses\\Machine_Learning_2022\\Jupyter Exercises\\Pandas\\movielens\n",
+      "\n",
+      "07/10/2023  19:31    <DIR>          .\n",
+      "07/10/2023  19:31    <DIR>          ..\n",
+      "03/06/2019  12:49       323.544.381 genome-scores.csv\n",
+      "03/06/2019  12:35            18.103 genome-tags.csv\n",
+      "03/06/2019  12:35                 0 Icon_\n",
+      "03/06/2019  12:35           570.090 links.csv\n",
+      "03/06/2019  12:49         1.397.542 movies.csv\n",
+      "03/06/2019  12:43       533.444.411 ratings.csv\n",
+      "03/06/2019  12:35            10.261 README.txt\n",
+      "03/06/2019  12:35        16.603.996 tags.csv\n",
+      "               8 archivos    875.588.784 bytes\n",
+      "               2 dirs  39.446.061.056 bytes libres\n"
      ]
     }
    ],
    "source": [
     "!DIR\n",
-    "!cd movielens"
+    "!DIR movielens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8799e3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    movieId  ...                                       genres\n",
+      "0         1  ...  Adventure|Animation|Children|Comedy|Fantasy\n",
+      "1         2  ...                   Adventure|Children|Fantasy\n",
+      "2         3  ...                               Comedy|Romance\n",
+      "3         4  ...                         Comedy|Drama|Romance\n",
+      "4         5  ...                                       Comedy\n",
+      "5         6  ...                        Action|Crime|Thriller\n",
+      "6         7  ...                               Comedy|Romance\n",
+      "7         8  ...                           Adventure|Children\n",
+      "8         9  ...                                       Action\n",
+      "9        10  ...                    Action|Adventure|Thriller\n",
+      "10       11  ...                         Comedy|Drama|Romance\n",
+      "11       12  ...                                Comedy|Horror\n",
+      "12       13  ...                 Adventure|Animation|Children\n",
+      "13       14  ...                                        Drama\n",
+      "14       15  ...                     Action|Adventure|Romance\n",
+      "\n",
+      "[15 rows x 3 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27273</th>\n",
+       "      <td>131254</td>\n",
+       "      <td>Kein Bund für's Leben (2007)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27274</th>\n",
+       "      <td>131256</td>\n",
+       "      <td>Feuer, Eis &amp; Dosenbier (2002)</td>\n",
+       "      <td>Comedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27275</th>\n",
+       "      <td>131258</td>\n",
+       "      <td>The Pirates (2014)</td>\n",
+       "      <td>Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27276</th>\n",
+       "      <td>131260</td>\n",
+       "      <td>Rentun Ruusu (2001)</td>\n",
+       "      <td>(no genres listed)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27277</th>\n",
+       "      <td>131262</td>\n",
+       "      <td>Innocence (2014)</td>\n",
+       "      <td>Adventure|Fantasy|Horror</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       movieId                          title                    genres\n",
+       "27273   131254   Kein Bund für's Leben (2007)                    Comedy\n",
+       "27274   131256  Feuer, Eis & Dosenbier (2002)                    Comedy\n",
+       "27275   131258             The Pirates (2014)                 Adventure\n",
+       "27276   131260            Rentun Ruusu (2001)        (no genres listed)\n",
+       "27277   131262               Innocence (2014)  Adventure|Fantasy|Horror"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "The majority of data sets are stored in text files, and the way that these datas are ordered separated\n",
+    "with commas; so with the method \"read_csv()\" you have to pass the route first and then the separation \n",
+    "character. This method will separate all these values and store them in dataframes.\n",
+    "\"\"\"\n",
+    "import pandas as pd\n",
+    "movies = pd.read_csv(\"movielens/movies.csv\", sep=\",\")\n",
+    "tags = pd.read_csv(\"movielens/tags.csv\", sep=\",\")\n",
+    "ratings = pd.read_csv(\"movielens/ratings.csv\", sep=\",\")\n",
+    "\n",
+    "# This is a new method (\"head()\"), it will show the first 15 rows.\n",
+    "print(movies.head(15))\n",
+    "movies.tail()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "178d7468",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId  movieId            tag   timestamp\n",
+      "0      18     4141    Mark Waters  1240597180\n",
+      "1      65      208      dark hero  1368150078\n",
+      "2      65      353      dark hero  1368150079\n",
+      "3      65      521  noir thriller  1368149983\n",
+      "4      65      592      dark hero  1368150078\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>465559</th>\n",
+       "      <td>138446</td>\n",
+       "      <td>55999</td>\n",
+       "      <td>dragged</td>\n",
+       "      <td>1358983772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465560</th>\n",
+       "      <td>138446</td>\n",
+       "      <td>55999</td>\n",
+       "      <td>Jason Bateman</td>\n",
+       "      <td>1358983778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465561</th>\n",
+       "      <td>138446</td>\n",
+       "      <td>55999</td>\n",
+       "      <td>quirky</td>\n",
+       "      <td>1358983778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465562</th>\n",
+       "      <td>138446</td>\n",
+       "      <td>55999</td>\n",
+       "      <td>sad</td>\n",
+       "      <td>1358983772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465563</th>\n",
+       "      <td>138472</td>\n",
+       "      <td>923</td>\n",
+       "      <td>rise to power</td>\n",
+       "      <td>1194037967</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        userId  movieId            tag   timestamp\n",
+       "465559  138446    55999        dragged  1358983772\n",
+       "465560  138446    55999  Jason Bateman  1358983778\n",
+       "465561  138446    55999         quirky  1358983778\n",
+       "465562  138446    55999            sad  1358983772\n",
+       "465563  138472      923  rise to power  1194037967"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(tags.head())\n",
+    "tags.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "baba90b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId  movieId  rating   timestamp\n",
+      "0       1        2     3.5  1112486027\n",
+      "1       1       29     3.5  1112484676\n",
+      "2       1       32     3.5  1112484819\n",
+      "3       1       47     3.5  1112484727\n",
+      "4       1       50     3.5  1112484580\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20000258</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>68954</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1258126920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20000259</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>69526</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1259865108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20000260</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>69644</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1260209457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20000261</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>70286</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1258126944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20000262</th>\n",
+       "      <td>138493</td>\n",
+       "      <td>71619</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1255811136</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          userId  movieId  rating   timestamp\n",
+       "20000258  138493    68954     4.5  1258126920\n",
+       "20000259  138493    69526     4.5  1259865108\n",
+       "20000260  138493    69644     3.0  1260209457\n",
+       "20000261  138493    70286     5.0  1258126944\n",
+       "20000262  138493    71619     2.5  1255811136"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MovieId is linked with the tags dataframe.\n",
+    "print(ratings.head())\n",
+    "ratings.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cade465c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For now we'll delete the timestamp columns in tags and ratings.\n",
+    "del ratings[\"timestamp\"]\n",
+    "del tags[\"timestamp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a4ad0115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating\n",
+       "0       1        2     3.5\n",
+       "1       1       29     3.5\n",
+       "2       1       32     3.5\n",
+       "3       1       47     3.5\n",
+       "4       1       50     3.5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8799e3e1",
+   "id": "69fb44cc",
    "metadata": {},
    "outputs": [],
    "source": []
