Compress the .csv files

--- a/Jupyter Exercises/Pandas/movielens.ipynb
+++ b/Jupyter Exercises/Pandas/movielens.ipynb
@@ -5,7 +5,8 @@
    "id": "cffd0022",
    "metadata": {},
    "source": [
-    "# Case study. Movielens"
+    "# Case study. Movielens\n",
+    "To use this code you'll have to extract the zip \"movielens\" in the Pandas folder."
    ]
   },
   {
@@ -180,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "178d7468",
+   "id": "7b9f15b2",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "baba90b2",
+   "id": "3c5e7d79",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cade465c",
+   "id": "d1d59a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a4ad0115",
+   "id": "1f320d48",
    "metadata": {},
    "outputs": [
     {
@@ -484,9 +485,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53266a35",
+   "metadata": {},
+   "source": [
+    "# Operating with Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b1843f5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's extract a row and confirm that we did a Serie indeed.\n",
+    "row_0 = tags.iloc[0]\n",
+    "type(row_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "391e4969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userId              18\n",
+      "movieId           4141\n",
+      "tag        Mark Waters\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(row_0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f84c6ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['userId', 'movieId', 'tag'], dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_0.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "23094e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "row_0[\"userId\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2393ba8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"rating\" in row_0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30fd0527",
+   "metadata": {},
+   "source": [
+    "# Operating with DataFrames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9c8bf73d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['userId', 'movieId', 'rating'], dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "908e8c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2.000026e+07\n",
+       "mean     3.525529e+00\n",
+       "std      1.051989e+00\n",
+       "min      5.000000e-01\n",
+       "25%      3.000000e+00\n",
+       "50%      3.500000e+00\n",
+       "75%      4.000000e+00\n",
+       "max      5.000000e+00\n",
+       "Name: rating, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This method is so important, because we can see how a particular column is behaving.\n",
+    "ratings[\"rating\"].describe()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69fb44cc",
+   "id": "472e1c96",
    "metadata": {},
    "outputs": [],
    "source": []
