Finished 1st regression model using football db.

--- a/Jupyter Exercises/Linear Regression/linearRegression_intro.ipynb
+++ b/Jupyter Exercises/Linear Regression/linearRegression_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4839cc2",
+   "id": "2145af99",
    "metadata": {},
    "source": [
     "# simple introduction to the lineal regression "
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a043fa75",
+   "id": "f4ccb706",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d7c1619",
+   "id": "074eabce",
    "metadata": {},
    "source": [
     "<br><br>\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f40ec95",
+   "id": "0354740d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "305b8145",
+   "id": "2f833a53",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1afa8c4",
+   "id": "a23e7fb9",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2c87cff7",
+   "id": "5154e809",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6fed04f4",
+   "id": "42c2c75d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bdfa84a0",
+   "id": "3f0db944",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6fc025",
+   "id": "726efc4e",
    "metadata": {},
    "source": [
     "# Mean Squared Error"
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992e32b2",
+   "id": "8afaa736",
    "metadata": {},
    "source": [
     "<br><br>\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42805dd",
+   "id": "40fe38d6",
    "metadata": {},
    "source": [
     "<div style=\"font-family:courier new;margin-top:40px;margin-bottom:40px\">\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f06a48",
+   "id": "fe86f133",
    "metadata": {},
    "source": [
     "<br><br>\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db24236",
+   "id": "b571b1cf",
    "metadata": {},
    "source": [
     "<div style=\"font-family:courier new;margin-top:40px;margin-bottom:40px\">\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "31e24a12",
+   "id": "74fec74c",
    "metadata": {},
    "outputs": [
     {
@@ -309,9 +309,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "750f5b75",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "\n",
+    "<div style=\"font-size:25px\">\n",
+    "$$\\hat{y} = f(\\vec{x^2}) $$ \n",
+    "<br>\n",
+    "$$ = \\vec{\\omega} \\cdot \\vec{x^2} + b $$ \n",
+    "<br>\n",
+    "$$ = \\omega_1 x_1^2 + \\omega_2 x_2^2 + \\cdots + \\omega_n x_n^2 + b$$ \n",
+    "<br>\n",
+    "</div>\n",
+    "\n",
+    "<br><br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64371242",
+   "id": "5aa19a8f",
    "metadata": {},
    "outputs": [],
    "source": []
